[package]
name = "panepow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "game_plugin/default"
]

native = [
    "bevy/bevy_wgpu",
    "game_plugin/native"
]

dev = [
    "bevy/dynamic",
    "native",
]


[dependencies]
bevy = { version = "0.5", default-features = false }
game_plugin = { path = "game_plugin" }
winit = "0.24"

