[package]
name = "panepow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "game_plugin/default"
]

native = [
    "bevy/bevy_wgpu",
    "game_plugin/native"
]

web = [
    "bevy_webgl2",
]

dev = [
    "bevy/dynamic",
    "native",
]


[dependencies]
bevy = { version = "0.5", default-features = false }
game_plugin = { path = "game_plugin" }
winit = "0.24"

bevy_webgl2 = { version = "0.5.0", optional = true }

[build-dependencies]
embed-resource = "1.4"