[package]
name = "game_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_kira_audio/ogg"
]

native = [
    "bevy/bevy_wgpu",
]

[dependencies]
bevy = { version = "0.5", default-features = false }
bevy_kira_audio = "0.6"
rand = "0.8"
bevy_easings = "0.4"
bevy_asset_loader = "0.6"